Fix overflow desc in firefox

--- a/src/app/components/text-box/text-box.component.scss
+++ b/src/app/components/text-box/text-box.component.scss
@@ -1,7 +1,7 @@
 :host {
   width: 60%;
   max-width: 300px;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .textbox {
